--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -365,7 +365,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVf-UX-OtY">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="259" id="4fM-GG-SHW"/>
-                                    <constraint firstAttribute="height" constant="21" id="aEd-qF-871"/>
+                                    <constraint firstAttribute="height" constant="21" id="H1X-CQ-J57"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -396,9 +396,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="mN3-hJ-eFw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="0Tv-ku-u16"/>
-                            <constraint firstItem="pVf-UX-OtY" firstAttribute="top" secondItem="TRa-Y6-7Bo" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1hy-hd-ZaS"/>
-                            <constraint firstItem="pVf-UX-OtY" firstAttribute="leading" secondItem="FDa-dO-WKK" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6JZ-9t-eaN"/>
                             <constraint firstAttribute="trailing" secondItem="TRa-Y6-7Bo" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="7RI-qc-QSZ"/>
                             <constraint firstItem="vat-ms-T83" firstAttribute="top" secondItem="FDa-dO-WKK" secondAttribute="top" constant="24" id="879-oi-XKi"/>
                             <constraint firstItem="yik-Bf-XTH" firstAttribute="top" secondItem="mN3-hJ-eFw" secondAttribute="bottom" type="default" id="9pf-sC-dcO"/>
@@ -407,6 +404,9 @@
                             <constraint firstItem="yik-Bf-XTH" firstAttribute="leading" secondItem="FDa-dO-WKK" secondAttribute="leading" type="default" id="P6M-aJ-OCs"/>
                             <constraint firstItem="vat-ms-T83" firstAttribute="leading" secondItem="FDa-dO-WKK" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Q9S-4u-9Qc"/>
                             <constraint firstItem="TRa-Y6-7Bo" firstAttribute="leading" secondItem="vat-ms-T83" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="SdY-Lm-7bx"/>
+                            <constraint firstAttribute="trailing" secondItem="mN3-hJ-eFw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="eO0-e2-jI1"/>
+                            <constraint firstItem="pVf-UX-OtY" firstAttribute="leading" secondItem="FDa-dO-WKK" secondAttribute="leading" constant="25" id="fUU-Ta-adC"/>
+                            <constraint firstItem="pVf-UX-OtY" firstAttribute="top" secondItem="FDa-dO-WKK" secondAttribute="top" constant="121" id="iK6-BV-qVh"/>
                             <constraint firstItem="mN3-hJ-eFw" firstAttribute="leading" secondItem="FDa-dO-WKK" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ksM-UH-G43"/>
                             <constraint firstItem="TRa-Y6-7Bo" firstAttribute="top" secondItem="FDa-dO-WKK" secondAttribute="top" constant="12" id="u7Z-pK-r6j"/>
                         </constraints>
@@ -428,7 +428,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hqB-Du-eUA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2498" y="-587"/>
+            <point key="canvasLocation" x="2393" y="-811"/>
         </scene>
         <!--Person Profile View Controller-->
         <scene sceneID="NXm-ed-Vsx">
@@ -1323,9 +1323,6 @@
         <class className="KNMultiItemSelector" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KNMultiItemSelector.h"/>
             <relationships>
-                <relationship kind="action" name="goBack:" candidateClass="UIButton"/>
-                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
-                <relationship kind="action" name="goSearch:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="searchTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1396,10 +1393,10 @@
     <inferredMetricsTieBreakers>
         <segue reference="H5z-u7-vJR"/>
         <segue reference="8hN-KL-ukg"/>
-        <segue reference="aP2-Cp-5GH"/>
-        <segue reference="mNJ-h0-X0J"/>
+        <segue reference="yYa-b4-9nU"/>
         <segue reference="edV-n7-HcM"/>
-        <segue reference="hSP-JN-arM"/>
-        <segue reference="5s0-9K-Shm"/>
+        <segue reference="vap-t8-tVb"/>
+        <segue reference="83h-jB-Zo5"/>
+        <segue reference="Ixr-QI-REd"/>
     </inferredMetricsTieBreakers>
 </document>
