--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -66,7 +66,7 @@
             <objects>
                 <viewController storyboardIdentifier="PersonalProgramTKCalendarDayViewController" id="qBv-ti-Psr" customClass="PersonalProgramTKCalendarDayViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adV-Kh-K5h">
@@ -97,7 +97,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="bpu-1F-FdQ">
                         <barButtonItem key="backBarButtonItem" title="Back" id="X5N-8y-HXM"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="RBR-2p-7HY">
+                            <connections>
+                                <segue destination="ava-bD-PPQ" kind="push" id="GRq-xq-KeO"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0M-QI-1zM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -124,7 +130,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Xau-kq-OwU" kind="push" id="DDQ-Ew-0SQ"/>
+                                    <segue destination="Xau-kq-OwU" kind="push" id="5p9-qO-w1W"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-BT-VIX">
@@ -501,6 +507,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="Of5-fO-KHX">
                         <barButtonItem key="backBarButtonItem" title="Back" id="L5r-MF-ApX"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="9SZ-Kv-wdW">
+                            <connections>
+                                <segue destination="ava-bD-PPQ" kind="push" id="K7p-TQ-o8h"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
@@ -511,7 +522,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XHD-To-YFF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2905" y="408"/>
+            <point key="canvasLocation" x="2385" y="546"/>
         </scene>
         <!--All Notification View Controller - Notifications-->
         <scene sceneID="kBL-H0-B4I">
@@ -694,14 +705,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ef7-H5-a5B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2004" y="-242"/>
+            <point key="canvasLocation" x="1899" y="-216"/>
         </scene>
         <!--Communication View Controller - CommunicationViewController-->
         <scene sceneID="AI0-tf-MlB">
             <objects>
                 <viewController storyboardIdentifier="CommunicationViewController" title="CommunicationViewController" id="Xau-kq-OwU" customClass="CommunicationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E4x-fq-fpf">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sgs-th-nFd">
@@ -780,6 +791,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Organizer" id="XAi-Og-5V8"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="emailField" destination="p2G-ji-lE9" id="OX1-kD-dxQ"/>
                         <outlet property="feedback" destination="EJw-ks-XVp" id="lKF-zk-H28"/>
@@ -787,7 +799,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEq-FH-buG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1021" y="547"/>
+            <point key="canvasLocation" x="1028" y="443"/>
         </scene>
         <!--Multi Item Selector-->
         <scene sceneID="wcy-zG-w1B">
@@ -851,7 +863,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhY-z8-rq1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1500" y="467"/>
+            <point key="canvasLocation" x="1397" y="330"/>
         </scene>
         <!--Image View Controller - Maps-->
         <scene sceneID="D63-QF-twy">
@@ -899,7 +911,7 @@
             <objects>
                 <viewController storyboardIdentifier="EventUIViewController" id="BoZ-sp-bTT" customClass="EventUIViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ljv-Zl-qK0">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4wX-wE-vT0">
@@ -960,7 +972,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="nBS-qc-b5p">
                         <barButtonItem key="backBarButtonItem" title="Back" id="p7K-Nl-pNl"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="anL-jN-bqp">
+                            <connections>
+                                <segue destination="ava-bD-PPQ" kind="push" id="WWG-Xo-oVC"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="addNoteButton" destination="LKz-8v-671" id="vDB-St-gzF"/>
                         <outlet property="info" destination="9Wg-L1-0Di" id="rKS-Sb-yNX"/>
@@ -977,7 +995,7 @@
             <objects>
                 <viewController storyboardIdentifier="SearchViewController" id="ava-bD-PPQ" customClass="SearchViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xIz-FD-Qmo">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6BL-ln-IJY">
@@ -1083,6 +1101,7 @@
                     <navigationItem key="navigationItem" title="Search" id="K79-dm-gEw">
                         <barButtonItem key="backBarButtonItem" title="Back" id="HlR-gj-HZS"/>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="resultsOfSearch" destination="E1c-AO-yXT" id="4pU-9E-pXj"/>
                         <outlet property="searchBar" destination="8Gf-Kb-Reb" id="3A5-vg-J70"/>
@@ -1091,7 +1110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fn0-g6-vaY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1865" y="467"/>
+            <point key="canvasLocation" x="1253" y="-793"/>
         </scene>
         <!--All Notes View Controller - Notes-->
         <scene sceneID="sft-KW-qw5">
@@ -1257,6 +1276,134 @@
         <image name="Schedule.jpg" width="50" height="50"/>
         <image name="maps.jpg" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="AllNetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="AllNotesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="notesTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="AllNotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommunicationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="sendButton:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="EventUIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="addNoteButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="info" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="roomButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="HomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goToContacts:" candidateClass="UIButton"/>
+                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="IConfsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UINavigationItem"/>
+            </relationships>
+        </class>
+        <class className="ImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="KNMultiItemSelector" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KNMultiItemSelector.h"/>
+            <relationships>
+                <relationship kind="outlet" name="searchTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NoteViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NoteViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="addPerson:" candidateClass="UIButton"/>
+                <relationship kind="action" name="addSession:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="aboutPersonButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="aboutSessionButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="NotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="PersonProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="addNote" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
+        </class>
+        <class className="SearchViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doSearch:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="resultsOfSearch" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="TKCalendarDayViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKCalendarDayViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
@@ -1266,8 +1413,8 @@
         <segue reference="TwF-IC-8jf"/>
         <segue reference="5s0-9K-Shm"/>
         <segue reference="8hN-KL-ukg"/>
-        <segue reference="6VH-20-vTN"/>
-        <segue reference="CUQ-7U-pfd"/>
+        <segue reference="eJJ-Tb-A8d"/>
+        <segue reference="WWG-Xo-oVC"/>
         <segue reference="vap-t8-tVb"/>
         <segue reference="yYa-b4-9nU"/>
     </inferredMetricsTieBreakers>
